--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,69 @@
+/*/// VARIABLES ///*/
+/*--font-family---*/
+/*----font-weight----*/
+/*---colors---*/
+/*---background-colors---*/
 * {
   border: 0;
-  margin: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  margin: 0; }
 
 .top-header {
-  background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%); }
+  background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
+  box-shadow: 0 1px 0 0 #110038; }
+
+.top-header-text {
+  color: #FFFFFF;
+  font-family: "Chakra Petch";
+  font-weight: 400;
+  font-size: 12px;
+  letter-spacing: 0;
+  padding: 4px 3px 7px; }
+
+.menu {
+  display: flex;
+  margin: 0 91px;
+  justify-content: space-between; }
+
+.navigation-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 44px; }
+
+.logo-container {
+  height: 64px;
+  margin-top: 35px;
+  width: 103px; }
+
+.btn {
+  background-color: #F7C9F3;
+  border: 1px solid #110038;
+  box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
+  color: #110038;
+  font-family: "Chakra Petch";
+  font-weight: 400;
+  font-size: 16px;
+  height: 36px;
+  letter-spacing: 0;
+  line-height: 18px;
+  text-align: center;
+  width: 144px; }
+
+.btn.dropdown {
+  width: 36px;
+  background-color: greenyellow;
+  border-left: 0; }
+
+.menu-select-theme {
+  display: flex;
+  margin: 0 16px;
+  width: 167px; }
+
+.text-misGuifos {
+  font-family: "Chakra Petch"; }
+
+.text-underlined-misGuifos {
+  text-decoration: underline; }
 
 /*# sourceMappingURL=style.css.map */
