--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,97 @@
-$backgroundColor: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
+/*/// VARIABLES ///*/
 
-*{
+/*--font-family---*/
+
+$fontFamilyChakraPetch: 'Chakra Petch';
+
+/*----font-weight----*/
+
+$fontWeightRegular: 400;
+
+/*---colors---*/
+
+$colorBlack: #110038;
+$colorWhite: #FFFFFF;
+
+/*---background-colors---*/
+
+$backgroundColorMenuBtn:  #F7C9F3;
+$backgroundColorTopHeader: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
+$borderBtn:  1px solid #110038;
+
+
+
+* {
     border: 0;
-    margin: 0;
     box-sizing: border-box;
+    margin: 0;
 }
-.top-header{
-    background-image: $backgroundColor;
+
+.top-header {
+    background-image: $backgroundColorTopHeader;
+    box-shadow: 0 1px 0 0 #110038;
 }
+
+.top-header-text {
+    color: $colorWhite;
+    font-family: $fontFamilyChakraPetch;
+    font-weight: $fontWeightRegular;
+    font-size: 12px;
+    letter-spacing: 0;  
+    padding: 4px 3px 7px;
+}
+
+.menu {
+    display: flex;
+    margin: 0 91px;
+    justify-content: space-between;
+}
+
+.navigation-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 44px;
+}
+
+.logo-container {
+    height: 64px;
+    margin-top: 35px;
+    width: 103px;
+}
+
+.btn {
+    background-color: $backgroundColorMenuBtn;
+    border: $borderBtn;
+    box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
+    color: $colorBlack;
+    font-family: $fontFamilyChakraPetch;
+    font-weight: $fontWeightRegular;
+    font-size: 16px;
+    height: 36px;
+    letter-spacing: 0;
+    line-height: 18px;
+    text-align: center;
+    width: 144px;
+}
+
+.btn.dropdown{
+    width: 36px;
+    background-color: greenyellow;
+    border-left: 0;
+}
+
+.menu-select-theme {
+    display: flex;
+    margin: 0 16px;
+    width: 167px;
+}
+
+.text-misGuifos {
+    font-family: $fontFamilyChakraPetch;
+}
+
+.text-underlined-misGuifos {
+    text-decoration: underline;
+}
+
