--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
   box-sizing: border-box;
   margin: 0; }
 
+/*----top-header----*/
 .top-header {
   background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
   box-shadow: 0 1px 0 0 #110038; }
@@ -20,10 +21,12 @@
   letter-spacing: 0;
   padding: 4px 3px 7px; }
 
-.menu {
+/*-----menu-navigation-bar----*/
+.menu-navigation-bar {
   display: flex;
   margin: 0 91px;
-  justify-content: space-between; }
+  justify-content: space-between;
+  margin-bottom: 35px; }
 
 .navigation-bar {
   display: flex;
@@ -52,7 +55,6 @@
 
 .btn.dropdown {
   width: 36px;
-  background-color: greenyellow;
   border-left: 0; }
 
 .menu-select-theme {
@@ -65,5 +67,138 @@
 
 .text-underlined-misGuifos {
   text-decoration: underline; }
+
+/*-----menu-search-bar----*/
+.menu-search-bar {
+  background: #E6E6E6;
+  box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+  height: 99px;
+  width: 1200px;
+  margin: 0 91px;
+  padding: 1px 1px;
+  margin-bottom: 64px; }
+
+.text.search {
+  padding: 3px 3px;
+  background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
+  color: #FFFFFF;
+  font-size: 14px;
+  letter-spacing: 0;
+  font-weight: 700;
+  margin-bottom: 12px; }
+
+.search-bar {
+  width: 1057px;
+  height: 48px;
+  margin-left: 15px;
+  background: #FFFFFF;
+  border: 1px solid #979797;
+  box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
+  padding: 13px 16px; }
+
+.btn.search {
+  width: 102px;
+  height: 36px;
+  margin-left: 8px;
+  font-size: 16px;
+  color: #B4B4B4;
+  letter-spacing: 0;
+  line-height: 18px;
+  padding-left: 10px;
+  padding-right: 18px;
+  padding-top: 9px;
+  padding-bottom: 9px;
+  font-family: "Chakra Petch";
+  font-weight: 400; }
+
+.magnifying-glass-icon {
+  width: 16px;
+  height: 16px; }
+
+/*---Suggested guifos----*/
+.text-suggested-gif {
+  color: #110038;
+  width: 1200px;
+  height: 32px;
+  background: #FFFAFE;
+  border: 1px solid #E6BBE2;
+  box-shadow: inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
+  letter-spacing: 0;
+  padding-left: 7px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  font-family: "Chakra Petch";
+  font-weight: 400;
+  font-size: 14px;
+  margin: 0 91px; }
+
+.list-suggested-gifs {
+  display: grid;
+  grid-template-columns: 288px 288px 288px 288px;
+  grid-column-gap: 16px;
+  margin: 16px 91px 0px; }
+
+.gif-container {
+  /*     width: 288px;
+      height: 313px; */
+  background: #E6E6E6;
+  box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+  padding: 4px 4px;
+  /*    margin-right: 16px; */
+  margin-bottom: 64px; }
+
+.hashtag-gif-name {
+  align-items: center;
+  background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
+  color: #FFFFFF;
+  display: flex;
+  font-size: 14px;
+  font-weight: 700;
+  height: 24px;
+  letter-spacing: 0;
+  margin-bottom: 2px;
+  padding: 3px 3px;
+  position: relative;
+  width: 280px;
+  z-index: 0; }
+
+.gif-image-container {
+  width: 280px;
+  margin-top: 3px;
+  height: 280px;
+  position: relative;
+  z-index: 0; }
+
+.gif-image {
+  width: 100%;
+  height: 100%; }
+
+.btn-close {
+  width: 16px;
+  height: 14px;
+  margin-right: 4px;
+  position: absolute;
+  z-index: 1;
+  right: 0; }
+
+.btn-see-more {
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  left: 0;
+  background: #4180F6;
+  border: 1px solid #4C2F99;
+  box-shadow: inset -2px -2px 0 0 #284F99, inset 2px 2px 0 0 #FFFFFF;
+  font-family: "Chakra Petch";
+  font-weight: 400;
+  font-size: 14px;
+  color: #FFFFFF;
+  letter-spacing: 0;
+  text-align: center;
+  line-height: 18px;
+  width: 81px;
+  height: 34px;
+  margin-bottom: 15px;
+  margin-left: 7px; }
 
 /*# sourceMappingURL=style.css.map */
