--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,7 @@ $fontFamilyChakraPetch: 'Chakra Petch';
 /*----font-weight----*/
 
 $fontWeightRegular: 400;
+$fontWeightChakraPetch-Bold: 700;
 
 /*---colors---*/
 
@@ -26,6 +27,7 @@ $borderBtn:  1px solid #110038;
     box-sizing: border-box;
     margin: 0;
 }
+/*----top-header----*/
 
 .top-header {
     background-image: $backgroundColorTopHeader;
@@ -40,11 +42,14 @@ $borderBtn:  1px solid #110038;
     letter-spacing: 0;  
     padding: 4px 3px 7px;
 }
+ 
+/*-----menu-navigation-bar----*/
 
-.menu {
+.menu-navigation-bar {
     display: flex;
     margin: 0 91px;
     justify-content: space-between;
+    margin-bottom: 35px;
 }
 
 .navigation-bar {
@@ -77,13 +82,12 @@ $borderBtn:  1px solid #110038;
 
 .btn.dropdown{
     width: 36px;
-    background-color: greenyellow;
     border-left: 0;
 }
 
 .menu-select-theme {
     display: flex;
-    margin: 0 16px;
+    margin: 0 16px; 
     width: 167px;
 }
 
@@ -95,3 +99,150 @@ $borderBtn:  1px solid #110038;
     text-decoration: underline;
 }
 
+/*-----menu-search-bar----*/
+
+.menu-search-bar {
+    background: #E6E6E6;
+    box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+    height: 99px;
+    width: 1200px;
+    margin: 0 91px;
+    padding: 1px 1px;
+    margin-bottom: 64px;
+}
+
+.text.search {
+    padding: 3px 3px;
+    background-image: $backgroundColorTopHeader;
+    color: $colorWhite;
+    font-size: 14px;
+    letter-spacing: 0;
+    font-weight: $fontWeightChakraPetch-Bold;
+    margin-bottom: 12px;
+}
+
+.search-bar {
+    width: 1057px;
+    height: 48px;
+    margin-left: 15px;
+    background: $colorWhite;
+    border: 1px solid #979797;
+    box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
+    padding: 13px 16px;
+}
+
+.btn.search {
+    width: 102px;
+    height: 36px;
+    margin-left: 8px;
+    font-size: 16px;
+    color: #B4B4B4;
+    letter-spacing: 0;
+    line-height: 18px;
+    padding-left:10px;
+    padding-right: 18px;
+    padding-top: 9px;
+    padding-bottom: 9px;
+    font-family: $fontFamilyChakraPetch;
+    font-weight: $fontWeightRegular; 
+}
+
+.magnifying-glass-icon{
+    width: 16px;
+    height: 16px;
+}
+
+/*---Suggested guifos----*/
+
+.text-suggested-gif {
+    color: #110038;
+    width: 1200px;
+    height: 32px;
+    background: #FFFAFE;
+    border: 1px solid #E6BBE2;
+    box-shadow: inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
+    letter-spacing: 0;
+    padding-left: 7px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    font-family: $fontFamilyChakraPetch;
+    font-weight: $fontWeightRegular;
+    font-size: 14px;
+    margin:0 91px;
+}
+
+.list-suggested-gifs {
+    display: grid;
+    grid-template-columns: 288px 288px 288px 288px;
+    grid-column-gap: 16px;
+    margin: 16px 91px 0px;
+}
+
+.gif-container {
+/*     width: 288px;
+    height: 313px; */
+    background: #E6E6E6;
+    box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+    padding: 4px 4px;
+ /*    margin-right: 16px; */
+    margin-bottom: 64px;
+}
+
+.hashtag-gif-name {
+    align-items: center;
+    background-image: $backgroundColorTopHeader;
+    color: $colorWhite;
+    display: flex;
+    font-size: 14px;
+    font-weight: $fontWeightChakraPetch-Bold;
+    height: 24px;
+    letter-spacing: 0;
+    margin-bottom: 2px;
+    padding: 3px 3px;
+    position: relative;
+    width: 280px;
+    z-index: 0; 
+} 
+
+.gif-image-container {
+    width: 280px;
+    margin-top: 3px;
+    height: 280px;
+    position: relative;
+    z-index: 0;
+}
+
+.gif-image {
+    width: 100%;
+    height: 100%;
+}
+
+.btn-close {
+    width: 16px;
+    height: 14px;
+    margin-right: 4px;
+    position: absolute;
+    z-index: 1;
+    right: 0;
+}
+
+.btn-see-more {
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    background: #4180F6;
+    border: 1px solid #4C2F99;
+    box-shadow: inset -2px -2px 0 0 #284F99, inset 2px 2px 0 0 #FFFFFF;
+    font-family: $fontFamilyChakraPetch;
+    font-weight: $fontWeightRegular;
+    font-size: 14px;
+    color: #FFFFFF;
+    letter-spacing: 0;
+    text-align: center;
+    line-height: 18px;
+    width: 81px;
+    height: 34px;
+    margin-bottom: 15px;
+    margin-left: 7px;
+}
