--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,6 @@
   background: #E6E6E6;
   box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
   height: 99px;
-  width: 1200px;
   margin: 0 91px;
   padding: 1px 1px;
   margin-bottom: 64px; }
@@ -87,25 +86,29 @@
   font-weight: 700;
   margin-bottom: 12px; }
 
+.search-bar-container {
+  display: flex;
+  align-items: center; }
+
 .search-bar {
-  width: 1057px;
   height: 48px;
   margin-left: 15px;
   background: #FFFFFF;
   border: 1px solid #979797;
   box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
-  padding: 13px 16px; }
+  padding: 13px 16px;
+  width: 100%; }
 
 .btn.search {
   width: 102px;
   height: 36px;
   margin-left: 8px;
+  margin-right: 18px;
   font-size: 16px;
   color: #B4B4B4;
   letter-spacing: 0;
   line-height: 18px;
   padding-left: 10px;
-  padding-right: 18px;
   padding-top: 9px;
   padding-bottom: 9px;
   font-family: "Chakra Petch";
@@ -116,9 +119,11 @@
   height: 16px; }
 
 /*---Suggested guifos----*/
+.suggested-guifos-container {
+  margin: 0 91px; }
+
 .text-suggested-gif {
   color: #110038;
-  width: 1200px;
   height: 32px;
   background: #FFFAFE;
   border: 1px solid #E6BBE2;
@@ -129,23 +134,19 @@
   padding-bottom: 7px;
   font-family: "Chakra Petch";
   font-weight: 400;
-  font-size: 14px;
-  margin: 0 91px; }
+  font-size: 14px; }
 
 .list-suggested-gifs {
-  display: grid;
-  grid-template-columns: 288px 288px 288px 288px;
-  grid-column-gap: 16px;
-  margin: 16px 91px 0px; }
+  background-color: gold;
+  display: flex;
+  margin-top: 16px; }
 
 .gif-container {
-  /*     width: 288px;
-      height: 313px; */
   background: #E6E6E6;
   box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
   padding: 4px 4px;
-  /*    margin-right: 16px; */
-  margin-bottom: 64px; }
+  margin-bottom: 64px;
+  margin-right: 16px; }
 
 .hashtag-gif-name {
   align-items: center;
@@ -159,18 +160,15 @@
   margin-bottom: 2px;
   padding: 3px 3px;
   position: relative;
-  width: 280px;
   z-index: 0; }
 
 .gif-image-container {
-  width: 280px;
   margin-top: 3px;
   height: 280px;
   position: relative;
   z-index: 0; }
 
 .gif-image {
-  width: 100%;
   height: 100%; }
 
 .btn-close {
