--- a/sass/style.scss
+++ b/sass/style.scss
@@ -95,10 +95,10 @@ body {
 }
 
 
-.btn:hover,
-.btn:active {
-    background: $theme1BtnHoverBackground;
-}
+// .btn:hover,
+// .btn:active {
+//     background: $theme1BtnHoverBackground;
+// }
 
 
 .btn.dropdown{
@@ -389,4 +389,119 @@ body {
 .trend-guifos-container {
     margin-left: 91px;
     margin-right: 91px;
+}
+
+/*---------------myGuifos--------*/
+
+.logo-container.myGifos {
+    display: flex;
+}
+
+.logo {
+    margin-left: 7px;
+}
+
+.btn-back {
+    background: none;
+}
+.crateGif-modal {
+    background: #E6E6E6;
+    box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+    height: 386px;
+    margin: 0 378px;
+    padding: 1px 1px;
+    margin-bottom: 64px;
+    width: 684px;
+}
+
+.first-step-title {
+    padding-top: 3px;
+    padding-left: 4px;
+    display: flex;
+    justify-content: space-between;
+    background-image: $theme1BackgroundImage;
+    color: $colorWhite;
+    font-size: 14px;
+    letter-spacing: 0;
+    font-weight: $fontWeightChakraPetchBold;
+    margin-bottom: 12px;
+}
+
+.createGif-subtitle {
+    display: flex;
+    align-items: center;
+    font-family: $fontFamilyChakraPetch;
+    font-size: 16px;
+    color: #110038;
+    letter-spacing: 0;
+    line-height: 22px;
+    margin-left: 25px;
+    margin-bottom: 7px;
+    font-weight: $fontWeightChakraPetchBold;
+}
+
+.subtitle {
+    display: inline-block;
+    margin-left: 16px;
+}
+
+.createGif-description {
+    margin-left: 73px;
+    margin-right: 93px;
+    margin-bottom: 28px;
+    height: 190px;
+    font-family: $fontFamilyChakraPetch;
+    font-size: 14px;
+    color: #110038;
+    letter-spacing: 0;
+    line-height: 20px;
+   
+}
+
+.navigation-buttons.createGif {
+    margin-left: 344px;
+}
+
+.createGif-section {
+    margin-left: 100px;
+    margin-right: 140px;
+}
+
+.text-description {
+    display: block;
+    margin-bottom: 7px;
+}
+
+.title.misGuifos {
+    margin: 0 100px;
+}
+
+.getVideoCaption {
+    height: 434px;
+    margin-left: 8px;
+    margin-right: 8px;
+    background-color: azure;
+    text-align: center;
+    margin-bottom: 24px;
+}
+
+.navigation-buttons {
+    display: flex;
+    margin-left: 200px;
+}
+
+.btn.getCaptionImage {
+    width: 36px;
+}
+
+.navigation-buttons {
+    margin-left: 663px;
+}
+
+.btn.caption {
+    margin-right: 13px;
+}
+
+.close-btn {
+    margin-right: 8px;
 }
