--- a/sass/style.scss
+++ b/sass/style.scss
@@ -128,8 +128,8 @@ body {
 .search-bar-results-content {
     display: none;
     position: absolute;
-    top: 260px;
-    width: 1402px;
+    top: 251px;
+    width: 1503px;
     z-index: 1;
     background: $theme1BtnDropdownBackground;
     box-shadow: $theme1BtnDropdownBoxShadow;
@@ -166,6 +166,10 @@ body {
 
 .show {
     display: block;
+}
+
+.not-show {
+    display: none;
 }
 
 .theme-option {
@@ -229,7 +233,7 @@ body {
     height: 99px;
     margin: 0 91px;
     padding: 1px 1px;
-    margin-bottom: 64px;
+    margin-bottom: 12px;
 }
 
 .text.search {
@@ -276,6 +280,32 @@ body {
 .magnifying-glass-icon{
     width: 16px;
     height: 16px;
+}
+
+/*----tags section----*/
+
+.tags-section {
+    margin: 0 91px;
+    margin-bottom: 54px;
+    text-align: center;
+    display: flex;
+}
+
+.tagWrapper {
+    height: 34px;
+    background-color: goldenrod;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 7px;
+    padding-top: 8px;
+    padding-right: 8px;
+    margin-right: 8px;
+    padding-bottom: 8px;
+    background: #4180F6;
+    border: 1px solid #4C2F99;
+    box-shadow: inset -2px -2px 0 0 #284F99, inset 2px 2px 0 0 #FFFFFF;
+    color: $colorWhite;
 }
 
 /*---Suggested guifos----*/
@@ -391,6 +421,11 @@ body {
     margin-right: 91px;
 }
 
+
+/*---------search results guifos------*/
+.search-guifos-container {
+    margin: 0 91px;
+}
 /*---------------myGuifos--------*/
 
 
@@ -500,3 +535,5 @@ body {
 .close-btn {
     margin-right: 8px;
 }
+
+
