Modify mis guifos section

--- a/css/style.css
+++ b/css/style.css
@@ -431,4 +431,8 @@ body {
 .close-btn {
   margin-right: 8px; }
 
+/*--------mis guifos-----*/
+.mis-guifos-container {
+  margin: 0 91px; }
+
 /*# sourceMappingURL=style.css.map */
