--- a/sass/createguifo.scss
+++ b/sass/createguifo.scss
@@ -159,3 +159,44 @@ $borderFooterBtn:  1px solid #110038;
     width: 100%;
     height: 434px;
 }
+
+/*---------Modal subiendo guifo-----------*/
+
+.uploadGifDetails {
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: center;
+}
+
+.icon-glob {
+    margin-top: 139px;
+    margin-bottom: 8px;
+    width: 48px;
+    height: 48px;
+}
+.progress-detail {
+    font-family: $fontWeightChakraPetchRegular;
+    font-size: 12px;
+    color:$colorFontBlack;
+    margin-top: 71px;
+    letter-spacing: 0;
+    text-align: center;
+    line-height: 14px;
+}
+
+.progressive-bar {
+    width: 324px;
+    height: 24px;
+    margin-top: 39px;
+    background-color: green;
+    display: flex;
+    align-items: center;
+}
+
+.progression {
+    width: 15px;
+    height: 24px;
+    background-color: rebeccapurple;
+    border: 1px solid $colorFontWhite;
+}
