--- a/sass/createguifo.scss
+++ b/sass/createguifo.scss
@@ -63,13 +63,13 @@ $borderFooterBtn:  1px solid #110038;
     justify-content: space-between;
     letter-spacing: 0;
     margin-bottom: 8px;
+    padding-bottom: 3px;
     padding-top: 3px;
     padding-left: 4px;
 }
 
 .content {
     width: 832px;
-    height: 434px;
     margin-bottom: 24px;
     padding: 0 14px;
 }
@@ -82,11 +82,14 @@ $borderFooterBtn:  1px solid #110038;
 
 .createGuifoVideoCaptionWrapper {
     height: 434px;
-    margin-bottom: 24px;
     width: 100%;
 }
 
 /*---------Modal create guifo-----------*/
+
+.content.main-wrapper {
+    height: 190px;
+}
 
 .subtitle-create-gif {
     align-items: center;
@@ -163,33 +166,32 @@ $borderFooterBtn:  1px solid #110038;
 /*---------Modal subiendo guifo-----------*/
 
 .uploadGifDetails {
+    background-color: $colorFontWhite;
     display: flex;
     flex-direction: column;
+    height: 440px;
     align-items:center;
     justify-content: center;
 }
 
 .icon-glob {
-    margin-top: 139px;
     margin-bottom: 8px;
+    margin-top: 139px;
     width: 48px;
     height: 48px;
 }
-.progress-detail {
-    font-family: $fontWeightChakraPetchRegular;
-    font-size: 12px;
-    color:$colorFontBlack;
-    margin-top: 71px;
-    letter-spacing: 0;
-    text-align: center;
-    line-height: 14px;
+
+.upload-details {
+    font-weight: $fontWeightChakraPetchBold;
+    margin-bottom: 41px;
 }
 
 .progressive-bar {
     width: 324px;
     height: 24px;
     margin-top: 39px;
-    background-color: green;
+    margin-bottom: 8px;
+    background-color: #999999;;
     display: flex;
     align-items: center;
 }
@@ -197,6 +199,17 @@ $borderFooterBtn:  1px solid #110038;
 .progression {
     width: 15px;
     height: 24px;
-    background-color: rebeccapurple;
+    background-color: #F7C9F3;;
     border: 1px solid $colorFontWhite;
 }
+
+.progress-detail {
+    font-family: $fontWeightChakraPetchRegular;
+    font-size: 12px;
+    color:$colorFontBlack;
+    letter-spacing: 0;
+    margin-bottom: 138px;
+    text-align: center;
+    line-height: 14px;
+}
+
