--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,4 @@
-/*/// VARIABLES ///*/
-/*--font-family---*/
-/*----font-weight----*/
-/*---colors---*/
-/*---background-colors---*/
-/*----Box shadows----*/
-/*/// VARIABLES ///*/
+/* SAILOR DAY THEME */
 * {
   border: 0;
   box-sizing: border-box;
@@ -29,7 +23,7 @@ body {
 /*-----menu-navigation-bar----*/
 .menu-navigation-bar {
   display: flex;
-  margin: 0 91px;
+  margin: 0 140px;
   justify-content: space-between;
   margin-bottom: 35px; }
 
@@ -122,9 +116,9 @@ body {
   display: none; }
 
 .theme-option {
-  background: #FFF4FD;
-  border: 1px solid #CCA6C9;
-  box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
+  background: #E6E6E6;
+  border: #E6E6E6;
+  box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
   font-family: "Chakra Petch";
   font-size: 16px;
   height: 36px;
@@ -172,7 +166,7 @@ body {
   background: #E6E6E6;
   box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
   height: 99px;
-  margin: 0 91px;
+  margin: 0 140px;
   padding: 1px 1px;
   margin-bottom: 12px; }
 
@@ -182,7 +176,7 @@ body {
   color: #FFFFFF;
   font-size: 14px;
   letter-spacing: 0;
-  font-weight: 700;
+  font-weight: "Chakra Petch";
   margin-bottom: 12px; }
 
 .search-bar-container {
@@ -198,28 +192,34 @@ body {
   padding: 13px 16px;
   width: 100%; }
 
-.btn.search {
+.btn-search {
   width: 102px;
   height: 36px;
   margin-left: 8px;
   margin-right: 18px;
   font-size: 16px;
-  color: #B4B4B4;
-  letter-spacing: 0;
   line-height: 18px;
   padding-left: 10px;
   padding-top: 9px;
   padding-bottom: 9px;
-  font-family: "Chakra Petch";
-  font-weight: 400; }
+  background: #E6E6E6;
+  border: 1px solid #808080;
+  box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF; }
 
+/* .btn.search {
+    background:none;
+    color: #B4B4B4;
+    letter-spacing: 0;
+    font-family: $fontFamilyChakraPetch;
+    font-weight: $fontWeightChakraPetchRegular; 
+} */
 .magnifying-glass-icon {
   width: 16px;
   height: 16px; }
 
 /*----tags section----*/
 .tags-section {
-  margin: 0 91px;
+  margin: 0 140px;
   margin-bottom: 54px;
   text-align: center;
   display: flex; }
@@ -242,7 +242,7 @@ body {
 
 /*---Suggested guifos----*/
 .suggested-guifos-container {
-  margin: 0 91px; }
+  margin: 0 140px; }
 
 .title {
   color: #110038;
@@ -282,19 +282,21 @@ body {
 .gif-container:last-child {
   margin-right: 0px; }
 
-.hashtag-gif-name {
+.hashtag-gif-name-wrapper {
   align-items: center;
   background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
-  color: #FFFFFF;
   display: flex;
-  font-size: 14px;
-  font-weight: 700;
   height: 24px;
-  letter-spacing: 0;
   margin-bottom: 2px;
   padding: 3px 3px;
   position: relative;
   z-index: 0; }
+
+.gif-name {
+  color: #FFFFFF;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 0; }
 
 .gif-image-container {
   height: 280px;
@@ -335,45 +337,11 @@ body {
 
 /*----------Trend guifos section------------*/
 .trend-guifos-container {
-  margin-left: 91px;
-  margin-right: 91px; }
+  margin: 0 140px; }
 
 /*---------search results guifos------*/
 .search-guifos-container {
-  margin: 0 91px; }
-
-/*---------------myGuifos--------*/
-.logo-container.myGifos {
-  display: flex; }
-
-.logo {
-  margin-left: 7px; }
-
-.btn-back {
-  background: none;
-  width: 24px;
-  height: 24px; }
-
-/*----create guifo modal----*/
-.getVideoCaption {
-  height: 434px;
-  margin-left: 8px;
-  margin-right: 8px;
-  background-color: azure;
-  text-align: center;
-  margin-bottom: 24px; }
-
-.btn.getCaptionImage {
-  width: 36px; }
-
-.btn.caption {
-  margin-right: 13px; }
-
-.close-btn {
-  margin-right: 8px; }
-
-/*--------mis guifos-----*/
-.mis-guifos-container {
-  margin: 0 91px; }
+  margin: 0 140px;
+  display: none; }
 
 /*# sourceMappingURL=style.css.map */
