--- a/sass/misguifos.scss
+++ b/sass/misguifos.scss
@@ -1,3 +1,5 @@
+@import "styles.scss";
+
 /*--------Mis guifos-------*/
 
 .logo-container.myGifos {
@@ -15,7 +17,7 @@
 }
 
 .mis-guifos-container {
-    margin: 0 91px;
+    margin: 0 140px;
 }
 
 .title {
