--- a/css/index.css
+++ b/css/index.css
@@ -1,18 +1,3 @@
-@charset "UTF-8";
-* {
-  border: 0;
-  box-sizing: border-box;
-  margin: 0; }
-
-body {
-  background-color: #FFF4FD; }
-
-.show {
-  display: block; }
-
-.not-show {
-  display: none; }
-
 * {
   border: 0;
   box-sizing: border-box;
@@ -364,307 +349,4 @@ body {
   margin: 0 140px;
   display: none; }
 
-/*---Modal configuration---*/
-.modal-wrapper {
-  background: #E6E6E6;
-  box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
-  margin: 0 378px;
-  padding-left: 3px;
-  padding-right: 3px;
-  padding-top: 3px; }
-
-.medium-wrapper {
-  height: 386px;
-  margin-bottom: 153px;
-  width: 684px; }
-
-.big-wrapper {
-  height: 548px;
-  margin: 0 265px;
-  margin-bottom: 153px;
-  width: 860px; }
-
-.small-wrapper {
-  height: 391px;
-  margin-bottom: 153px;
-  width: 721px; }
-
-.title-modal {
-  background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
-  color: #FFFFFF;
-  display: flex;
-  font-size: 14px;
-  font-weight: 700;
-  justify-content: space-between;
-  letter-spacing: 0;
-  margin-bottom: 8px;
-  padding-bottom: 3px;
-  padding-top: 3px;
-  padding-left: 4px; }
-
-.content {
-  width: 832px;
-  margin-bottom: 24px;
-  padding: 0 14px; }
-
-.navigation-buttons {
-  display: flex;
-  justify-content: flex-end;
-  margin-right: 10px; }
-
-.createGuifoVideoCaptionWrapper {
-  height: 434px;
-  width: 100%; }
-
-/*----top-header----*/
-.top-header {
-  background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
-  box-shadow: 0 1px 0 0 #110038; }
-
-.top-header-text {
-  color: #FFFFFF;
-  font-family: "Chakra Petch";
-  font-weight: 400;
-  font-size: 12px;
-  letter-spacing: 0;
-  padding: 4px 3px 7px; }
-
-/*-----menu-navigation-bar----*/
-.logo-container {
-  height: 64px;
-  margin-top: 35px;
-  margin-left: 60px;
-  margin-bottom: 88px;
-  width: 103px; }
-
-.logo-container.myGifos {
-  display: flex; }
-
-.btn-back {
-  margin-right: 7px;
-  background: none; }
-
-/*---------Modal create guifo-----------*/
-.content.main-wrapper {
-  height: 190px; }
-
-.subtitle-create-gif {
-  align-items: center;
-  color: #110038;
-  display: flex;
-  font-family: "Chakra Petch";
-  font-size: 16px;
-  font-weight: 700;
-  letter-spacing: 0;
-  line-height: 22px;
-  margin-bottom: 7px;
-  margin-left: 25px;
-  margin-top: 30px; }
-
-.subtitle-description {
-  color: #110038;
-  display: inline-block;
-  font-family: "Chakra Petch";
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 22px;
-  letter-spacing: 0;
-  margin-left: 16px; }
-
-.content.create-gif {
-  color: #110038;
-  font-family: "Chakra Petch";
-  font-size: 14px;
-  height: 190px;
-  margin-bottom: 28px;
-  margin-left: 73px;
-  margin-right: 93px;
-  letter-spacing: 0;
-  line-height: 20px;
-  width: 518px; }
-
-.text-description {
-  display: block;
-  margin-bottom: 7px; }
-
-.btn.one {
-  background-color: #FFFFFF; }
-
-.btn.two {
-  margin-left: 16px;
-  margin-right: 36px; }
-
-.text-bold {
-  font-weight: 700; }
-
-.text-bold.cursive {
-  font-style: italic; }
-
-/*--------Mis guifos-------*/
-.mis-guifos-container {
-  margin: 0 91px; }
-
-.title {
-  color: #110038;
-  background: #FFFFFF;
-  height: 32px;
-  border: 1px solid #E6BBE2;
-  box-shadow: inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
-  letter-spacing: 0;
-  font-family: "Chakra Petch";
-  font-weight: 400;
-  font-size: 14px;
-  padding-left: 7px;
-  padding-top: 7px;
-  padding-bottom: 7px; }
-
-.title.list-gif {
-  margin-bottom: 16px; }
-
-.list-gifs {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  height: 313px;
-  margin-bottom: 64px; }
-
-.gif-container.bordered {
-  background: #E6E6E6;
-  box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
-  margin-right: 8px;
-  margin-left: 8px;
-  margin-bottom: 16px;
-  padding: 4px; }
-
-.gif-container:first-child {
-  margin-left: 0px; }
-
-.gif-container:last-child {
-  margin-right: 0px; }
-
-.hashtag-gif-name {
-  align-items: center;
-  background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
-  color: #FFFFFF;
-  display: flex;
-  font-size: 14px;
-  font-weight: 700;
-  height: 24px;
-  letter-spacing: 0;
-  margin-bottom: 2px;
-  padding: 3px 3px;
-  position: relative;
-  z-index: 0; }
-
-.gif-image-container {
-  height: 280px;
-  position: relative;
-  z-index: 0; }
-
-.gif-image {
-  width: 280px;
-  height: 100%; }
-
-/*---------Modal un chequeo antes de empezar-----------*/
-.btn.icon-btn {
-  width: 36px; }
-
-.previewViewImage {
-  width: 100%;
-  height: 434px; }
-
-/*---------Modal capturando tu guifo-----------*/
-.btn.icon-btn.red {
-  background-color: #FF6161; }
-
-.btn.red {
-  background-color: #FF6161;
-  color: #FFFFFF; }
-
-/*---------Modal subiendo guifo-----------*/
-.uploadGifDetails {
-  background-color: #FFFFFF;
-  display: flex;
-  flex-direction: column;
-  height: 440px;
-  align-items: center;
-  justify-content: center; }
-
-.icon-glob-wrapper {
-  margin-top: 174px; }
-
-.icon-glob {
-  margin-bottom: 8px;
-  width: 48px;
-  height: 48px; }
-
-.upload-details {
-  font-weight: 700;
-  font-family: "Chakra Petch";
-  color: #110038;
-  letter-spacing: 0;
-  text-align: center;
-  line-height: 22px;
-  margin-bottom: 41px; }
-
-.progressive-bar {
-  width: 324px;
-  height: 24px;
-  margin-top: 39px;
-  margin-bottom: 8px;
-  background-color: #999999;
-  display: flex;
-  align-items: center; }
-
-.progression {
-  width: 15px;
-  height: 24px;
-  background-color: #F7C9F3;
-  border: 1px solid #FFFFFF; }
-
-.progress-detail {
-  font-family: "Chakra Petch";
-  font-weight: 400;
-  font-size: 12px;
-  color: rgba(17, 0, 56, 0.64);
-  letter-spacing: 0;
-  margin-bottom: 138px;
-  text-align: center;
-  line-height: 14px; }
-
-.text-line-through {
-  text-decoration: line-through; }
-
-/*--------Modal Guifo subido con éxito---------*/
-.uploadedGuifoWrapper {
-  display: flex; }
-
-.imgUploadedGuifo {
-  width: 365px;
-  height: 191px;
-  background-color: azure;
-  margin-top: 27px;
-  margin-right: 24px; }
-
-.optionsWrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center; }
-
-.uploadStatusDetail {
-  font-family: "Chakra Petch";
-  font-weight: 700;
-  font-size: 16px;
-  color: #110038;
-  letter-spacing: 0;
-  line-height: 22px;
-  margin-bottom: 16px; }
-
-.btn.option.one {
-  width: 256px;
-  height: 36px; }
-
-.btn.option.one.option1 {
-  margin-bottom: 14px; }
-
-/*# sourceMappingURL=createguifo.css.map */
+/*# sourceMappingURL=index.css.map */
