--- a/sass/createguifo.scss
+++ b/sass/createguifo.scss
@@ -1,60 +1,5 @@
-/* SAILOR DAY THEME */
-
-$fontFamilyChakraPetch: 'Chakra Petch';
-
-$fontWeightChakraPetchBold: 700;
-$fontWeightChakraPetchRegular: 400;
-
-$colorFontWhite: #FFFFFF;
-$colorFontBlack: #110038;
-
-$backgroundColorTitle: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
-$backgroundColorContent: #E6E6E6;
-$backgroundColorFooterBtn: #F7C9F3;
-
-$boxShadowTopHeader: 0 1px 0 0 #110038;
-$boxShadowContent: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
-$boxShadowFooterBtn: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
-
-$borderFooterBtn:  1px solid #110038;
-
-
-* {
-    border: 0;
-    box-sizing: border-box;
-    margin: 0;
-}
-
-body {
-    background-color: #FFF4FD;
-}
- 
-.show {
-    display: block;
-}
-
-.not-show { 
-    display: none;
-}
-
-
- /*-------- general settings----*/
-
-.btn {
-    background-color: $backgroundColorFooterBtn;
-    border: $borderFooterBtn;
-    box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
-    color: $colorFontBlack;
-    cursor: pointer;
-    font-family: $fontFamilyChakraPetch;
-    font-weight: $fontWeightChakraPetchRegular;
-    font-size: 16px;
-    height: 36px;
-    letter-spacing: 0;
-    line-height: 18px;
-    text-align: center;
-    width: 144px;
-}
+@import "styles.scss";
+@import "index.scss";
 
 /*---Modal configuration---*/
 
