--- a/css/createguifo.css
+++ b/css/createguifo.css
@@ -364,6 +364,96 @@ body {
   margin: 0 140px;
   display: none; }
 
+* {
+  border: 0;
+  box-sizing: border-box;
+  margin: 0; }
+
+body {
+  background-color: #FFF4FD; }
+
+.show {
+  display: block; }
+
+.not-show {
+  display: none; }
+
+/*--------Mis guifos-------*/
+.logo-container.myGifos {
+  display: flex; }
+
+.logo {
+  margin-left: 7px; }
+
+.btn-back {
+  background: none;
+  width: 24px;
+  height: 24px; }
+
+.mis-guifos-container {
+  margin: 0 140px; }
+
+.title {
+  color: #110038;
+  background: #FFFFFF;
+  height: 32px;
+  border: 1px solid #E6BBE2;
+  box-shadow: inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
+  letter-spacing: 0;
+  font-family: "Chakra Petch";
+  font-weight: 400;
+  font-size: 14px;
+  padding-left: 7px;
+  padding-top: 7px;
+  padding-bottom: 7px; }
+
+.title.list-gif {
+  margin-bottom: 16px; }
+
+.list-gifs {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  height: 313px;
+  margin-bottom: 64px; }
+
+.gif-container.bordered {
+  background: #E6E6E6;
+  box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+  margin-right: 8px;
+  margin-left: 8px;
+  margin-bottom: 16px;
+  padding: 4px; }
+
+.gif-container:first-child {
+  margin-left: 0px; }
+
+.gif-container:last-child {
+  margin-right: 0px; }
+
+.hashtag-gif-name {
+  align-items: center;
+  background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
+  color: #FFFFFF;
+  display: flex;
+  font-size: 14px;
+  font-weight: 700;
+  height: 24px;
+  letter-spacing: 0;
+  margin-bottom: 2px;
+  padding: 3px 3px;
+  position: relative;
+  z-index: 0; }
+
+.gif-image-container {
+  height: 280px;
+  position: relative;
+  z-index: 0; }
+
+.gif-image {
+  width: 280px;
+  height: 100%; }
+
 /*---Modal configuration---*/
 .modal-wrapper {
   background: #E6E6E6;
@@ -610,15 +700,15 @@ body {
 .progressive-bar {
   width: 324px;
   height: 24px;
-  margin-top: 39px;
   margin-bottom: 8px;
   background-color: #999999;
+  box-shadow: inset 2px 2px 0 0 #FFFCFC, inset -2px -2px 0 0 #000000;
   display: flex;
   align-items: center; }
 
 .progression {
   width: 15px;
-  height: 24px;
+  height: 26px;
   background-color: #F7C9F3;
   border: 1px solid #FFFFFF; }
 
@@ -642,7 +732,6 @@ body {
 .imgUploadedGuifo {
   width: 365px;
   height: 191px;
-  background-color: azure;
   margin-top: 27px;
   margin-right: 24px; }
 
@@ -666,5 +755,11 @@ body {
 
 .btn.option.one.option1 {
   margin-bottom: 14px; }
+
+.btn.option.one.option2 {
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
 /*# sourceMappingURL=createguifo.css.map */
